Item styling fix overlap. (this style was removed probably a merge/git issue)

--- a/src/styles/pages/ViewItems.scss
+++ b/src/styles/pages/ViewItems.scss
@@ -1,5 +1,13 @@
 @import "../components/slick";
 
+.item {
+  padding: 0 10px;
+  transform: scale(.8);
+  opacity: .5;
+  transition: all 300ms ease;
+}
+
+
 .slick-slider {
 
   .slick-track{
